--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
+
 html
 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color:cadetblue;
     margin: 0px;
-    
+    display: flex;
 
 
 }
 p
 {
-    margin-inline-start: 2vw;
+    
 }
 span
 {
-    margin-inline-start: 2vw;
+   
 }
 body
 {
@@ -24,36 +25,69 @@ body
 {
     padding: 8vh 0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
 
+nav{
+    position: fixed;
+    display: flex;
+    align-content: center;
+}
+#header{
+   
+    left: 0;
+    top: 0;
+    width:100vw;
+    height:5vh;
+    z-index: 2;
+}
 h1
 {
-background-color: darkslategray;
+    
+    font-family: 'Josefin', sans-serif;
+text-shadow: 2px 2px 5px #000000;
 color: white;
-font-size: large;
-padding: 5vh 98% 5vh 2%;
+font-size:2vw;
+padding-left: 2%;
+padding-top: 0.5%;
 position: fixed;
-margin: 0%;
+z-index: 3;
 }
 
 .gifs
 {
+
+    width: 100vw;
+    display: flex;
     background-color: darkcyan;
-    padding: 4vh 0px 4vh 2vw;
+    padding: 0vh 0vh;
     margin-inline-start: 0vw;
+    justify-content: space-around;
+    flex-wrap: wrap;
     
 }
 
 #ola
 {
-font-size:50px;
-margin: 5vh;
+    display: flex;
+    
+    font-size:5vw;
+    justify-content:space-around;
 }
+
+.corpo{
+
+    font-size: 2vw;
+    display: flex;
+    justify-content: flex-start;
+}
+
 #video
 {
-    margin-left: 2vw;
+    width: 100vw;
 }
 
 #MusicPlayer
 {
-    margin-left: 2vw;
+    display: flex;
+    justify-content: center;
 }
