--- a/style.css
+++ b/style.css
@@ -1,93 +1,15 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-html
-{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color:cadetblue;
-    margin: 0px;
-    display: flex;
-
-
+.card-zoom {
+  @apply relative flex items-center justify-center m-3 overflow-hidden shadow-xl w-60 h-60 rounded-2xl;
 }
-p
-{
-    
-}
-span
-{
-   
-}
-body
-{
-    margin: 0%;
+.card-zoom-image {
+  @apply absolute w-full h-full transition-all duration-500 ease-in-out transform bg-center bg-cover;
 }
 
-#spacer
-{
-    padding: 8vh 0;
-}
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
-
-nav{
-    position: fixed;
-    display: flex;
-    align-content: center;
-}
-#header{
-   
-    left: 0;
-    top: 0;
-    width:100vw;
-    height:5vh;
-    z-index: 2;
-}
-h1
-{
-    
-    font-family: 'Josefin', sans-serif;
-text-shadow: 2px 2px 5px #000000;
-color: white;
-font-size:2vw;
-padding-left: 2%;
-padding-top: 0.5%;
-position: fixed;
-z-index: 3;
+.card-zoom:hover .card-zoom-image {
+  @apply scale-150;
 }
 
-.gifs
-{
-
-    width: 100vw;
-    display: flex;
-    background-color: darkcyan;
-    padding: 0vh 0vh;
-    margin-inline-start: 0vw;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    
-}
-
-#ola
-{
-    display: flex;
-    
-    font-size:5vw;
-    justify-content:space-around;
-}
-
-.corpo{
-
-    font-size: 2vw;
-    display: flex;
-    justify-content: flex-start;
-}
-
-#video
-{
-    width: 100vw;
-}
-
-#MusicPlayer
-{
-    display: flex;
-    justify-content: center;
-}
